<resources>
    <string name="app_name">财神记账</string>
    <string name="title_account_book">资产</string>
    <string name="title_record">记一笔</string>
    <string name="title_me">我的</string>
    <string name="record_in">记录借入</string>
    <string name="record_out">记录借出</string>

    <string name="record_name_out">借钱给谁</string>
    <string name="record_name_in">向谁借钱</string>
    <string name="record_count_out">借出金额</string>
    <string name="record_count_in">借入金额</string>
    <string name="record_rate">借款利率</string>
    <string name="record_borrow_time">借款日期</string>
    <string name="record_return_time">归还日期</string>
    <string name="record_photo">照片</string>
    <string name="record_note">备注</string>
    <string name="finish">完成</string>
    e
    <string name="me_about_us">个人信息</string>
    <string name="me_recommend">推荐给好友</string>
    <string name="me_logout">退出登录</string>
    <string name="me_suggestion">反馈意见</string>
    <string name="me_info">个人信息</string>

    <string name="today_income">今日收益</string>
    <string name="total_asset">总资产(元)</string>
    <string name="month_income">本月收益</string>
    <string name="year_income">本年收益</string>
    <string name="month">本月</string>
    <string name="year">本年</string>
    <string name="detail">详情</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
