<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.candy.caishenaccountbook.home.ui.record.RecordFragment"
        android:label="@string/title_account_book"
        tools:layout="@layout/fragment_record" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.candy.caishenaccountbook.home.ui.accountbook.AccountBookFragment"
        android:label="@string/title_record"
        tools:layout="@layout/fragment_accountbook" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.candy.caishenaccountbook.home.ui.me.MeFragment"
        android:label="@string/title_me"
        tools:layout="@layout/fragment_me" />
</navigation>
