<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".record.ui.RecordInFragment"
    tools:ignore="MissingConstraints">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/record_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/name_et"
            style="@style/RecordEditTheme"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/count_et"
            style="@style/RecordEditTheme"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toBottomOf="@id/name_et"/>

        <EditText
            android:id="@+id/rate_et"
            style="@style/RecordEditTheme"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toBottomOf="@id/count_et" />

        <EditText
            android:id="@+id/borrow_date_et"
            style="@style/RecordEditTheme"
            android:inputType="datetime"
            app:layout_constraintTop_toBottomOf="@id/rate_et" />

        <EditText
            android:id="@+id/return_date_et"
            style="@style/RecordEditTheme"
            android:inputType="datetime"
            app:layout_constraintTop_toBottomOf="@id/borrow_date_et" />

        <EditText
            android:id="@+id/photo_et"
            style="@style/RecordEditTheme"
            app:layout_constraintTop_toBottomOf="@id/return_date_et" />

        <EditText
            android:id="@+id/note_et"
            style="@style/RecordEditTheme"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/photo_et" />

        <TextView
            android:id="@+id/name_tv"
            style="@style/RecordTextTheme"
            android:text="@string/record_name_in"
            app:layout_constraintBaseline_toBaselineOf="@id/name_et"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/count_tv"
            style="@style/RecordTextTheme"
            android:text="@string/record_count_in"
            app:layout_constraintBaseline_toBaselineOf="@id/count_et"
            app:layout_constraintTop_toBottomOf="@id/name_tv"/>

        <TextView
            android:id="@+id/rate_tv"
            style="@style/RecordTextTheme"
            android:text="@string/record_rate"
            app:layout_constraintBaseline_toBaselineOf="@id/rate_et"
            app:layout_constraintTop_toBottomOf="@id/count_tv"/>

        <TextView
            android:id="@+id/borrow_date_tv"
            style="@style/RecordTextTheme"
            android:text="@string/record_borrow_time"
            app:layout_constraintBaseline_toBaselineOf="@id/borrow_date_et"
            app:layout_constraintTop_toBottomOf="@id/rate_tv"/>

        <TextView
            android:id="@+id/return_date_tv"
            style="@style/RecordTextTheme"
            android:text="@string/record_return_time"
            app:layout_constraintBaseline_toBaselineOf="@id/return_date_et"
            app:layout_constraintTop_toBottomOf="@id/borrow_date_tv"/>

        <TextView
            android:id="@+id/photo_tv"
            style="@style/RecordTextTheme"
            android:text="@string/record_photo"
            app:layout_constraintBaseline_toBaselineOf="@id/photo_et"
            app:layout_constraintTop_toBottomOf="@id/return_date_tv"/>

        <TextView
            android:id="@+id/note_tv"
            style="@style/RecordTextTheme"
            android:text="@string/record_note"
            app:layout_constraintBaseline_toBaselineOf="@id/note_et"
            app:layout_constraintTop_toBottomOf="@id/photo_tv"/>

        <TextView
            android:id="@+id/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/finish"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/note_et"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="count_tv,rate_tv,name_tv,borrow_date_tv,note_tv,photo_tv,return_date_tv">

        </androidx.constraintlayout.widget.Barrier>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>